--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 ---
 layout: default
-title: .glosa | .surtos linguísticos
+title: .glosa lab | .surtos linguísticos
 ---
 
 <p class="metadata">
     // status: inicializando_estudos<br />
     // branch: main<br />
-    // origin: eandrade-ling/glosa
+    // origin: glosa-lab.github.io
 </p>
 
+<h2>redes sociais</h2>
 <nav>
-    <a href="{{ '/producao-tecnica' | relative_url }}">/produção_técnica</a>
+    <a href="https://www.linkedin.com/in/ev-andrade">
+        <i class="fa-brands fa-linkedin"></i> /linkedin
+    </a>
+    <br />
+    <a href="https://twitter.com/glosalab">
+        <i class="fa-brands fa-x-twitter"></i> /twitter
+    </a>
 </nav>
