--- a/sobre.html
+++ b/sobre.html
@@ -51,14 +51,23 @@ title: .sobre
     <section class="conexoes">
         <h3>[ conexões ]</h3>
         <ul style="list-style: none; padding: 0; margin-top: 1.5rem;">
-            <li style="margin-bottom: 0.5rem;">
-                <strong>// lattes:</strong> <a href="https://lattes.cnpq.br/9867142494039279" target="_blank">curriculo.lattes.cnpq.br</a>
+            <li style="margin-bottom: 0.8rem;">
+                <strong>// lattes:</strong> 
+                <a href="https://lattes.cnpq.br/9867142494039279" target="_blank">
+                    <i class="fa-solid fa-address-card"></i> curriculo_lattes
+                </a>
             </li>
-            <li style="margin-bottom: 0.5rem;">
-                <strong>// linkedin:</strong> <a href="https://linkedin.com/in/ev-andrade" target="_blank">linkedin.com/in/ev-andrade</a>
+            <li style="margin-bottom: 0.8rem;">
+                <strong>// linkedin:</strong> 
+                <a href="https://linkedin.com/in/ev-andrade" target="_blank">
+                    <i class="fa-brands fa-linkedin"></i> /ev-andrade
+                </a>
             </li>
-            <li style="margin-bottom: 0.5rem;">
-                <strong>// contato:</strong> <a href="mailto:evelini.andrade@alumni.usp.br">enviar e-mail</a>
+            <li style="margin-bottom: 0.8rem;">
+                <strong>// contato:</strong> 
+                <a href="mailto:evelini.andrade@alumni.usp.br">
+                    <i class="fa-solid fa-envelope"></i> enviar_email
+                </a>
             </li>
         </ul>
     </section>
