--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@ layout: default
 title: .glosa lab | .surtos linguísticos
 ---
 
-<h2>redes sociais</h2>
-<nav>
-    <a href="https://www.linkedin.com/in/ev-andrade">
-        <i class="fa-brands fa-linkedin"></i> /linkedin
-    </a>
-    <br />
-    <a href="https://twitter.com/glosalab">
-        <i class="fa-brands fa-x-twitter"></i> /twitter
-    </a>
-</nav>
+<h2>.glosa lab [v1.0.0]</h2>
+
+<p><strong>caderno de campo // laboratório de experimentação</strong> rastros de estudo e reflexões linguísticas várias em estado bruto.</p>
+
+<p>um acompanhamento dos <strong>surtos-estalos</strong> de quem tenta montar<br />
+e desmontar a língua e a linguagem.</p>
+
+<p>notas sobre pedagogia e o exercício de devorar a língua para<br />
+ver o que se <strong>entranha</strong> quando a gente abre a língua por dentro.</p>
+
+
+<div>
+    <code>>> status: em_processamento</code>
+</div>
+<div>
+    <code>>> modo: surto_contínuo</code>
+</div>
