--- a/producao-tecnica.html
+++ b/producao-tecnica.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: .produção técnica
+title: .ferramentas
 ---
 
 <section class="project-entry" style="margin-top: 2rem;">
