--- a/index.html
+++ b/index.html
@@ -5,14 +5,10 @@ title: .glosa lab | .surtos linguísticos
 
 <h2>.glosa lab [v1.0.0]</h2>
 
-<p><strong>caderno de campo // laboratório de experimentação</strong> rastros de estudo e reflexões linguísticas várias em estado bruto.</p>
+<p><strong>caderno de campo // laboratório de experimentação.</strong> notas, rastros de estudo e reflexões linguísticas em estado bruto.</p>
 
-<p>um acompanhamento dos <strong>surtos-estalos</strong> de quem tenta montar<br />
-e desmontar a língua e a linguagem.</p>
-
-<p>notas sobre pedagogia e o exercício de devorar a língua para<br />
-ver o que se <strong>entranha</strong> quando a gente abre a língua por dentro.</p>
-
+<p>um log dos <strong>surtos-estalos</strong> de quem tenta entender<br />
+como a língua funciona (e onde a coisa quebra).</p>
 
 <div>
     <code>>> status: em_processamento</code>
