--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: .glosa lab | .surtos linguísticos
 ---
 
-<h2>.glosa lab [v1.0.0]</h2>
+<h2>// .glosa lab [v1.0.0]</h2>
 
 <p><strong>caderno de campo // laboratório de experimentação.</strong> notas, rastros de estudo e reflexões linguísticas em estado bruto.</p>
 
