--- a/cadernos.html
+++ b/cadernos.html
@@ -3,7 +3,7 @@ layout: default
 title: .glosa lab | .cadernos
 ---
 
-<h2>.cadernos</h2>
+<h2>// .cadernos</h2>
 
 <p>meus cadernos de estudo e notas em estado bruto, com enganos, rabiscos, riscos, confusões ortográficas e tudo o que há de bom.</p>
 
